Bug 186444 - Amarok 2 filebrowser does not remember sort order
Summary: Amarok 2 filebrowser does not remember sort order
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (show other bugs)
Version: 2.1-SVN
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-07 13:48 UTC by Eelko Berkenpies
Modified: 2009-03-09 09:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eelko Berkenpies 2009-03-07 13:48:30 UTC
Version:           2.0-SVN (using KDE 4.2.1)
Compiler:          gcc version 4.3.2 20081105 (Red Hat 4.3.2-7) (GCC) 
OS:                Linux
Installed from:    Fedora RPMs

The short description pretty much says it all. The filebrowser doesn't seem to remember the sort order. 

Files are always being sorted in reverse order for me (Z...A). Easy to reproduce, when I change it to sort A...Z and close / reopen Amarok, it will sort Z...A again.

My current version of Amarok is r936240 and I'm compiling with Qt 4.5 (if that matters).
Comment 1 Mark Kretschmann 2009-03-07 13:54:47 UTC
Ok, that's probably true. I can confirm it without even testing it, cause I (re-)wrote the code, and probably missed that part.
Comment 2 Mark Kretschmann 2009-03-09 09:59:43 UTC
SVN commit 937249 by markey:

Make the Files browser remember the sorting order.

BUG: 186444

 M  +4 -1      FileBrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=937249