Make the Files browser remember the sorting order.

BUG: 186444

svn path=/trunk/extragear/multimedia/amarok/; revision=937249