src/browsers/filebrowser/FileBrowser.cpp
@@ -142,8 +142,10 @@ void FileBrowser::Widget::readConfig()
     setDir( config.readEntry( "Current Directory" ) );
 
     // KDirOperator view configuration:
-    m_dirOperator->setView( config.readEntry( "View Style" ) == "Detail" ? KFile::Detail : KFile::Simple );
+    m_dirOperator->setView( config.readEntry( "View Style", "Simple" ) == "Detail" ? KFile::Detail : KFile::Simple );
     m_dirOperator->view()->setSelectionMode( QAbstractItemView::ExtendedSelection );
+    if( config.hasKey( "Sorting" ) )
+        m_dirOperator->setSorting( static_cast<QDir::SortFlags>( config.readEntry( "Sorting" ).toInt() ) );
 
     m_filter->setHistoryItems( config.readEntry( "Filter History", QStringList() ), true );
 
@@ -158,6 +160,7 @@ void FileBrowser::Widget::writeConfig()
     KConfigGroup config = Amarok::config( "File Browser" );
 
     config.writeEntry( "Current Directory", m_dirOperator->url() );
+    config.writeEntry( "Sorting", QString::number( static_cast<QDir::SortFlags>( m_dirOperator->sorting() ) ) );
     config.writeEntry( "Filter History Length", m_filter->maxCount() );
     config.writeEntry( "Filter History", m_filter->historyItems() );
     config.writeEntry( "Last Filter", lastFilter );
